--- a/timeline.html
+++ b/timeline.html
@@ -1,121 +1,84 @@
-<div class="timeline">
-  <div class="container left">
-    <div class="date">Strategic Personal Branding</div>
-    <i class="icon fa fa-pencil-alt"></i>
-    <div class="content">
-      <h2>Step 1: Strategic Personal Branding</h2>
-      <p>
-        We begin by crafting your unique thought leadership identity. Our branding experts will work closely with you to:
-        <ul>
-          <li>Identify your core expertise and unique value proposition</li>
-          <li>Develop a compelling personal narrative</li>
-          <li>Create a visual brand identity</li>
-          <li>Refine your messaging for consistency</li>
-        </ul>
-      </p>
-    </div>
-  </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Visionary Impact Program</title>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Apply Manrope font to the entire document */
+body {
+    font-family: 'Manrope', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 
-  <div class="container right">
-    <div class="date">Content Creation & Distribution</div>
-    <i class="icon fa fa-file-alt"></i>
-    <div class="content">
-      <h2>Step 2: Content Creation & Distribution Strategy</h2>
-      <p>
-        Our team will help you create and disseminate thought-provoking content:
-        <ul>
-          <li>Content calendar development aligned with industry trends</li>
-          <li>Creating articles, white papers, and case studies</li>
-          <li>Producing video content and podcasts</li>
-          <li>Crafting social media strategies</li>
-          <li>Guest posting in prestigious healthcare publications</li>
-        </ul>
-      </p>
-    </div>
-  </div>
+.container {
+    width: 80%;
+    max-width:1200px;
+}
 
-  <div class="container left">
-    <div class="date">Public Speaking & Media Training</div>
-    <i class="icon fa fa-microphone"></i>
-    <div class="content">
-      <h2>Step 3: Public Speaking & Media Training</h2>
-      <p>
-        Hone your ability to communicate complex ideas with clarity:
-        <ul>
-          <li>One-on-one coaching with public speaking trainers</li>
-          <li>Media training for television, radio, and podcasts</li>
-          <li>Development of signature talks</li>
-          <li>Engagement strategies for keynotes, panels, workshops</li>
-        </ul>
-      </p>
-    </div>
-  </div>
+/* Style the program box */
+.program-box {
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    text-align: left  ;
+    margin: 20px 0;
+}
 
-  <div class="container right">
-    <div class="date">Network Expansion & Partnerships</div>
-    <i class="icon fa fa-users"></i>
-    <div class="content">
-      <h2>Step 4: Network Expansion & Strategic Partnerships</h2>
-      <p>
-        Expand your sphere of influence through curated connections:
-        <ul>
-          <li>Access to a network of healthcare influencers</li>
-          <li>Facilitation of strategic partnerships</li>
-          <li>Introductions to media contacts and conference organizers</li>
-          <li>Opportunities for collaborative research</li>
-        </ul>
-      </p>
-    </div>
-  </div>
+.program-box h2 {
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+    color: #333;
+}
 
-  <div class="container left">
-    <div class="date">Book Development & Publishing</div>
-    <i class="icon fa fa-book"></i>
-    <div class="content">
-      <h2>Step 5: Book Development & Publishing</h2>
-      <p>
-        Transform your knowledge into a published work:
-        <ul>
-          <li>Concept development and book proposal creation</li>
-          <li>Ghostwriting and editing services</li>
-          <li>Guidance on self-publishing vs. traditional publishing</li>
-          <li>Book launch and promotion strategies</li>
-        </ul>
-      </p>
-    </div>
-  </div>
+.program-box p {
+    font-size: 1.1rem;
+    margin-bottom: 20px;
+    color: #666;
+}
 
-  <div class="container right">
-    <div class="date">Digital Presence Optimization</div>
-    <i class="icon fa fa-globe"></i>
-    <div class="content">
-      <h2>Step 6: Digital Presence Optimization</h2>
-      <p>
-        Ensure your online presence reflects your thought leadership:
-        <ul>
-          <li>Develop a professional, branded website</li>
-          <li>Optimize LinkedIn and social media profiles</li>
-          <li>Create a Google Knowledge Panel</li>
-          <li>Implement SEO strategies for visibility</li>
-        </ul>
-      </p>
-    </div>
-  </div>
+.program-box ul {
+    list-style-type: none;
+    padding-left: 0;
+}
 
-  <div class="container left">
-    <div class="date">Legacy Planning & Philanthropy</div>
-    <i class="icon fa fa-handshake"></i>
-    <div class="content">
-      <h2>Step 7: Legacy Planning & Philanthropic Initiatives</h2>
-      <p>
-        Create a lasting impact that extends beyond your career:
-        <ul>
-          <li>Develop a personal or professional foundation</li>
-          <li>Create mentorship programs or educational initiatives</li>
-          <li>Establish awards or grants in your field</li>
-          <li>Strategic planning for long-term influence</li>
-        </ul>
-      </p>
+.program-box ul li {
+    font-size: 1.1rem;
+    margin-bottom: 10px;
+    color: #444;
+    line-height: 1.6;
+}
+
+.program-box ul li::before {
+    content: "✔️ ";
+    color: #28a745;
+}
+
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="program-box">
+            <h2>Who This Program Is For</h2>
+            <p>The Visionary Impact Program is tailored for accomplished healthcare professionals ready to amplify their influence, including:</p>
+            <ul>
+                <li>Healthcare CEOs and Executives: Visionaries steering organizations through complex challenges and driving industry-wide innovation.</li>
+                <li>Accomplished Private Practice Doctors: Specialists with unique methodologies and patient care approaches that could benefit the broader medical community.</li>
+                <li>Hospital Administrators: Leaders with invaluable insights into healthcare system optimization and patient experience enhancement.</li>
+                <li>Medical Researchers: Pioneers bridging the gap between groundbreaking discoveries and practical, life-saving applications.</li>
+                <li>Healthcare Entrepreneurs: Innovators reshaping the landscape of medical technology and service delivery.</li>
+                <li>Veteran Nurses and Healthcare Practitioners: Professionals with deep, hands-on experience in patient care and healthcare delivery systems.</li>
+            </ul>
+        </div>
     </div>
-  </div>
-</div>
+</body>
+</html>
