--- a/index.html
+++ b/index.html
@@ -810,17 +810,27 @@
 </div>
 
 
-<section id="contact" class="feature-contact">
-  <h2>Ready to Begin Your Thought Leadership Journey?</h2>
-  <p>The healthcare industry is at a crucial juncture, facing unprecedented challenges and opportunities. Your voice, your experience, and your vision are needed now more than ever.</p>
-  <p>Don't let your years of hard-won insights remain untapped. It's time to amplify your impact, shape the discourse, and leave a lasting legacy in healthcare.</p>
-  <p>Contact us today for a personalized consultation. We'll discuss your goals, assess your current positioning, and outline a tailored strategy to establish you as a prominent thought leader in healthcare.</p>
-  
-  <div class="flex-container">
-<button class="btn-primary">Request a Meeting</button>
-<button class="klaviyo_form_trigger3 btn-secondary">Join Our Newsletter</button>
-</div>
+<section id="contact" class="feature-contact bg-gray-100 py-12 px-4 flex items-center justify-center min-h-[50vh]">
+  <div class="max-w-1xl text-center space-y-6">
+    <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-gray-800">Ready to Begin Your Thought Leadership Journey?</h2>
+    <p class="text-base sm:text-lg md:text-xl text-gray-700 leading-relaxed">
+      The healthcare industry is at a crucial juncture, facing unprecedented challenges and opportunities. Your voice, your experience, and your vision are needed now more than ever.
+    </p>
+    <p class="text-base sm:text-lg md:text-xl text-gray-700 leading-relaxed">
+      Don't let your years of hard-won insights remain untapped. It's time to amplify your impact, shape the discourse, and leave a lasting legacy in healthcare.
+    </p>
+    <p class="text-base sm:text-lg md:text-xl text-gray-700 leading-relaxed">
+      Contact us today for a personalized consultation. We'll discuss your goals, assess your current positioning, and outline a tailored strategy to establish you as a prominent thought leader in healthcare.
+    </p>
+
+    <div class="flex justify-center space-x-4 mt-8">
+      <button class="btn-primary bg-indigo-600 text-white px-6 py-3 rounded-lg hover:bg-indigo-700 transition duration-300">Request a Meeting</button>
+      <button class="klaviyo_form_trigger3 btn-secondary bg-gray-300 text-gray-800 px-6 py-3 rounded-lg hover:bg-gray-400 transition duration-300">Join Our Newsletter</button>
+    </div>
+  </div>
 </section>
+</section>
+
 
 </main>
 <script type="text/javascript">
@@ -828,7 +838,6 @@ document.querySelector('.klaviyo_form_trigger3').addEventListener('click', funct
 window._klOnsite = window._klOnsite || []; 
 window._klOnsite.push(['openForm', 'Y8GzAv']); // Replace FORM_ID with your actual form ID
 });
-
 
 </div>
 </body>
