--- a/index.html
+++ b/index.html
@@ -829,16 +829,17 @@
     </div>
   </div>
 </section>
-</section>
-
 
 </main>
-<script type="text/javascript">
-document.querySelector('.klaviyo_form_trigger3').addEventListener('click', function () {
-window._klOnsite = window._klOnsite || []; 
-window._klOnsite.push(['openForm', 'Y8GzAv']); // Replace FORM_ID with your actual form ID
-});
 
-</div>
+<script type="text/javascript">
+  document.querySelector('.klaviyo_form_trigger3').addEventListener('click', function () {
+    window._klOnsite = window._klOnsite || []; 
+    window._klOnsite.push(['openForm', 'Y8GzAv']); // Replace FORM_ID with your actual form ID
+  });
+</script>
+</body>
+</html>
+
 </body>
 </html>
