--- a/index.html
+++ b/index.html
@@ -476,13 +476,20 @@
   .btn-secondary:hover {
     background-color: #f9fafb;
   }
+  .centered-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh; /* Full height of the viewport */
+}
 
 
   </style>
 </head>
 <body class="font-manrope bg-gray-100 flex flex-col items-center justify-center min-h-screen p-4 space-y-8">
 
-  <!-- Visionary Impact Program Section -->
+ <!-- Visionary Impact Program Section -->
+<div class="centered-container flex items-center justify-center min-h-screen">
   <div class="max-w-5xl w-full bg-white border-2 border-blue-500 p-6 rounded-lg shadow-lg md:p-8">
     <h2 class="text-2xl md:text-3xl font-bold text-blue-500 text-center">Amplify Your Impact, Shape the Future of Healthcare, and Create a Legacy That Transcends Generations</h2>
     <p class="italic text-center text-gray-700 mt-2">Your Wisdom, Amplified</p>
@@ -506,6 +513,7 @@
       <li><span class="font-semibold">Leave an indelible mark</span> on the future of medicine</li>
     </ul>
   </div>
+</div>
 
   <!-- Healthcare Thought Leadership Section -->
   <div class="max-w-4xl w-full bg-white p-8 rounded-lg shadow-lg space-y-8">
@@ -812,7 +820,7 @@
 
 <section id="contact" class="feature-contact bg-gray-100 py-12 px-4 flex items-center justify-center min-h-[50vh]">
   <div class="max-w-1xl text-center space-y-6">
-    <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-gray-800">Ready to Begin Your Thought Leadership Journey?</h2>
+    <h2 class="text-1xl sm:text-3xl lg:text-4xl font-bold text-gray-800">Ready to Begin Your Thought Leadership Journey?</h2>
     <p class="text-base sm:text-lg md:text-xl text-gray-700 leading-relaxed">
       The healthcare industry is at a crucial juncture, facing unprecedented challenges and opportunities. Your voice, your experience, and your vision are needed now more than ever.
     </p>
