add initial code

--- a/index.html
+++ b/index.html
@@ -482,7 +482,18 @@
   justify-content: center;
   min-height: 100vh; /* Full height of the viewport */
 }
-
+.centered-container1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh; /* Full height of the viewport */
+}
+.centered-container2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh; 
+}
 
   </style>
 </head>
@@ -515,7 +526,8 @@
   </div>
 </div>
 
-  <!-- Healthcare Thought Leadership Section -->
+ <!-- Healthcare Thought Leadership Section -->
+<div class="centered-container1 flex items-center justify-center min-h-screen">
   <div class="max-w-4xl w-full bg-white p-8 rounded-lg shadow-lg space-y-8">
     <h1 class="text-3xl md:text-4xl font-bold text-blue-500 text-center">Why Healthcare Needs Your Voice</h1>
 
@@ -543,54 +555,57 @@
     <p class="text-gray-800 text-center mt-6 leading-relaxed">
       In an era of rapid technological advancement and evolving healthcare challenges, the industry needs experienced voices more than ever. Your unique perspective, born from years of hands-on experience and strategic decision-making, is crucial in guiding the future of healthcare.
     </p>
-    <h2 class="text-2xl md:text-3xl font-semibold text-blue-500 text-center mt-6">The Power of Thought Leadership in Healthcare</h2>
-
+   
   </div>
-
+</div>
 
   
  
 
 
-  <section class="feature-box">
-    <h2>The Power of Thought Leadership in Healthcare</h2>
+  <!-- Feature Box Section -->
+<section class="centered-container2 flex items-center justify-center min-h-screen">
+  <div class="feature-box max-w-4xl w-full bg-white p-8 rounded-lg shadow-lg space-y-8">
+      <h2 class="text-3xl font-bold text-blue-500 text-center">The Power of Thought Leadership in Healthcare</h2>
 
-    <div class="feature">
-        <div class="icon"><i class="fas fa-brain"></i></div>
-        <h3>Shape Industry Trends and Policy</h3>
-        <p>As a recognized thought leader, your insights will influence key decision-makers, shaping policies and practices that impact millions of lives.</p>
-    </div>
+      <div class="feature">
+          <div class="icon"><i class="fas fa-brain"></i></div>
+          <h3>Shape Industry Trends and Policy</h3>
+          <p>As a recognized thought leader, your insights will influence key decision-makers, shaping policies and practices that impact millions of lives.</p>
+      </div>
 
-    <div class="feature">
-        <div class="icon"><i class="fas fa-users"></i></div>
-        <h3>Inspire the Next Generation</h3>
-        <p>Your journey and wisdom will serve as a beacon for up-and-coming healthcare professionals, guiding them towards innovation and excellence.</p>
-    </div>
+      <div class="feature">
+          <div class="icon"><i class="fas fa-users"></i></div>
+          <h3>Inspire the Next Generation</h3>
+          <p>Your journey and wisdom will serve as a beacon for up-and-coming healthcare professionals, guiding them towards innovation and excellence.</p>
+      </div>
 
-    <div class="feature">
-        <div class="icon"><i class="fas fa-globe"></i></div>
-        <h3>Global Influence</h3>
-        <p>Extend your impact far beyond your immediate practice or organization, affecting positive change on a global scale.</p>
-    </div>
+      <div class="feature">
+          <div class="icon"><i class="fas fa-globe"></i></div>
+          <h3>Global Influence</h3>
+          <p>Extend your impact far beyond your immediate practice or organization, affecting positive change on a global scale.</p>
+      </div>
 
-    <div class="feature">
-        <div class="icon"><i class="fas fa-book"></i></div>
-        <h3>Create a Lasting Legacy</h3>
-        <p>Develop a body of work and initiatives that will continue to influence healthcare long after your active career.</p>
-    </div>
+      <div class="feature">
+          <div class="icon"><i class="fas fa-book"></i></div>
+          <h3>Create a Lasting Legacy</h3>
+          <p>Develop a body of work and initiatives that will continue to influence healthcare long after your active career.</p>
+      </div>
 
-    <div class="feature">
-        <div class="icon"><i class="fas fa-microphone-alt"></i></div>
-        <h3>Prestigious Opportunities</h3>
-        <p>Gain access to high-profile speaking engagements, book deals, advisory roles, and media appearances.</p>
-    </div>
+      <div class="feature">
+          <div class="icon"><i class="fas fa-microphone-alt"></i></div>
+          <h3>Prestigious Opportunities</h3>
+          <p>Gain access to high-profile speaking engagements, book deals, advisory roles, and media appearances.</p>
+      </div>
 
-    <div class="feature">
-        <div class="icon"><i class="fas fa-chart-line"></i></div>
-        <h3>Elevate Your Personal and Organizational Brand</h3>
-        <p>Enhance your reputation and that of your organization, attracting top talent, partnerships, and opportunities.</p>
-    </div>
+      <div class="feature">
+          <div class="icon"><i class="fas fa-chart-line"></i></div>
+          <h3>Elevate Your Personal and Organizational Brand</h3>
+          <p>Enhance your reputation and that of your organization, attracting top talent, partnerships, and opportunities.</p>
+      </div>
+  </div>
 </section>
+
 
 
 
