--- a/index.html
+++ b/index.html
@@ -497,6 +497,9 @@
 
   </style>
 </head>
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -506,7 +509,7 @@
   <!-- Include Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 font-sans leading-relaxed">
+<body class="bg-gray-50 font-Manrope leading-relaxed">
 
   <div class="max-w-5xl mx-auto py-12 px-4">
     <div class="bg-white shadow-lg rounded-lg p-8 border border-blue-500">
@@ -532,6 +535,11 @@
       </ul>
     </div>
   </div>
+
+</body>
+</html>
+
+  
 
 
 
