--- a/index1.html
+++ b/index1.html
@@ -26,6 +26,7 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.1);
       background-color: white;
     }
+    
   </style>
 </head>
 <body class="bg-gradient-to-r from-gray-100 via-gray-200 to-gray-300 leading-relaxed">
@@ -143,6 +144,199 @@
       </div>
     </div>
   </div>
+  <div class="timeline-container">
+    <!-- Step 1 -->
+    <div class="timeline-step">
+      <div class="text-center">
+        <div class="timeline-number">1</div>
+        <div class="timeline-header">Strategic Personal Branding</div>
+        <p class="timeline-description">
+          We begin by crafting your unique thought leadership identity. Our branding experts will work closely with you to:
+        </p>
+        <ul class="list-disc list-inside text-lg text-gray-700">
+          <li>Identify your core expertise and unique value proposition</li>
+          <li>Develop a compelling personal narrative that resonates with your target audience</li>
+          <li>Create a visual brand identity that conveys authority and innovation</li>
+          <li>Refine your messaging to ensure consistency across all platforms</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Step 2 -->
+    <div class="timeline-step">
+      <div class="text-center">
+        <div class="timeline-number">2</div>
+        <div class="timeline-header">Content Creation and Distribution Strategy</div>
+        <p class="timeline-description">
+          Our team of expert writers, marketers, and industry specialists will help you create and disseminate thought-provoking content that establishes your authority:
+        </p>
+        <ul class="list-disc list-inside text-lg text-gray-700">
+          <li>Develop a content calendar aligned with industry trends and your expertise</li>
+          <li>Create in-depth articles, white papers, and case studies</li>
+          <li>Produce engaging video content and podcasts</li>
+          <li>Craft social media strategies to amplify your reach</li>
+          <li>Secure guest posting opportunities in prestigious healthcare publications</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Step 3 -->
+    <div class="timeline-step">
+      <div class="text-center">
+        <div class="timeline-number">3</div>
+        <div class="timeline-header">Public Speaking and Media Training</div>
+        <p class="timeline-description">
+          Hone your ability to communicate complex ideas with clarity and charisma:
+        </p>
+        <ul class="list-disc list-inside text-lg text-gray-700">
+          <li>One-on-one coaching with professional public speaking trainers</li>
+          <li>Media training for television, radio, and podcast appearances</li>
+          <li>Development of signature talks and presentations</li>
+          <li>Strategies for engaging audiences in various formats (keynotes, panels, workshops)</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Step 4 -->
+    <div class="timeline-step">
+      <div class="text-center">
+        <div class="timeline-number">4</div>
+        <div class="timeline-header">Network Expansion and Strategic Partnerships</div>
+        <p class="timeline-description">
+          Expand your sphere of influence through carefully curated connections:
+        </p>
+        <ul class="list-disc list-inside text-lg text-gray-700">
+          <li>Access to our exclusive network of healthcare influencers and decision-makers</li>
+          <li>Facilitation of strategic partnerships with complementary thought leaders</li>
+          <li>Introductions to media contacts and conference organizers</li>
+          <li>Opportunities for collaborative research and co-authored publications</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Step 5 -->
+    <div class="timeline-step">
+      <div class="text-center">
+        <div class="timeline-number">5</div>
+        <div class="timeline-header">Book Development and Publishing</div>
+        <p class="timeline-description">
+          Transform your knowledge into a published work that cements your thought leadership status:
+        </p>
+        <ul class="list-disc list-inside text-lg text-gray-700">
+          <li>Concept development and book proposal creation</li>
+          <li>Ghostwriting and editing services</li>
+          <li>Guidance on self-publishing vs. traditional publishing routes</li>
+          <li>Book launch and promotion strategies</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Step 6 -->
+    <div class="timeline-step">
+      <div class="text-center">
+        <div class="timeline-number">6</div>
+        <div class="timeline-header">Digital Presence Optimization</div>
+        <p class="timeline-description">
+          Ensure your online presence reflects your thought leadership status:
+        </p>
+        <ul class="list-disc list-inside text-lg text-gray-700">
+          <li>Development of a professional, branded website</li>
+          <li>Optimization of LinkedIn and other relevant social media profiles</li>
+          <li>Creation of a Google Knowledge Panel</li>
+          <li>Implementation of SEO strategies to improve online visibility</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Step 7 -->
+    <div class="timeline-step">
+      <div class="text-center">
+        <div class="timeline-number">7</div>
+        <div class="timeline-header">Legacy Planning and Philanthropic Initiatives</div>
+        <p class="timeline-description">
+          Create a lasting impact that extends beyond your career:
+        </p>
+        <ul class="list-disc list-inside text-lg text-gray-700">
+          <li>Development of a personal or professional foundation</li>
+          <li>Creation of mentorship programs or educational initiatives</li>
+          <li>Establishment of awards or grants in your field of expertise</li>
+          <li>Strategic planning for long-term influence in healthcare</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="bg-gray-50 py-16 px-6 md:px-20">
+    <!-- Title Section -->
+    <h2 class="text-3xl font-bold text-center text-blue-600 mb-8">
+      Who This Program Is For
+    </h2>
+  
+    <!-- Description Section -->
+    <p class="text-lg text-center text-gray-600 mb-12 max-w-4xl mx-auto">
+      The Visionary Impact Program is tailored for accomplished healthcare professionals ready to amplify their influence, including:
+    </p>
+  
+    <!-- List of Target Audiences -->
+    <div class="space-y-8 max-w-4xl mx-auto">
+      <div class="flex items-start space-x-4">
+        <div class="h-8 w-8 rounded-full bg-blue-600 text-white flex items-center justify-center text-lg font-semibold">
+          1
+        </div>
+        <div class="text-lg text-gray-700">
+          <h3 class="font-semibold text-xl text-gray-800">Healthcare CEOs and Executives</h3>
+          <p>Visionaries steering organizations through complex challenges and driving industry-wide innovation.</p>
+        </div>
+      </div>
+      <div class="flex items-start space-x-4">
+        <div class="h-8 w-8 rounded-full bg-blue-600 text-white flex items-center justify-center text-lg font-semibold">
+          2
+        </div>
+        <div class="text-lg text-gray-700">
+          <h3 class="font-semibold text-xl text-gray-800">Accomplished Private Practice Doctors</h3>
+          <p>Specialists with unique methodologies and patient care approaches that could benefit the broader medical community.</p>
+        </div>
+      </div>
+      <div class="flex items-start space-x-4">
+        <div class="h-8 w-8 rounded-full bg-blue-600 text-white flex items-center justify-center text-lg font-semibold">
+          3
+        </div>
+        <div class="text-lg text-gray-700">
+          <h3 class="font-semibold text-xl text-gray-800">Hospital Administrators</h3>
+          <p>Leaders with invaluable insights into healthcare system optimization and patient experience enhancement.</p>
+        </div>
+      </div>
+      <div class="flex items-start space-x-4">
+        <div class="h-8 w-8 rounded-full bg-blue-600 text-white flex items-center justify-center text-lg font-semibold">
+          4
+        </div>
+        <div class="text-lg text-gray-700">
+          <h3 class="font-semibold text-xl text-gray-800">Medical Researchers</h3>
+          <p>Pioneers bridging the gap between groundbreaking discoveries and practical, life-saving applications.</p>
+        </div>
+      </div>
+      <div class="flex items-start space-x-4">
+        <div class="h-8 w-8 rounded-full bg-blue-600 text-white flex items-center justify-center text-lg font-semibold">
+          5
+        </div>
+        <div class="text-lg text-gray-700">
+          <h3 class="font-semibold text-xl text-gray-800">Healthcare Entrepreneurs</h3>
+          <p>Innovators reshaping the landscape of medical technology and service delivery.</p>
+        </div>
+      </div>
+      <div class="flex items-start space-x-4">
+        <div class="h-8 w-8 rounded-full bg-blue-600 text-white flex items-center justify-center text-lg font-semibold">
+          6
+        </div>
+        <div class="text-lg text-gray-700">
+          <h3 class="font-semibold text-xl text-gray-800">Veteran Nurses and Healthcare Practitioners</h3>
+          <p>Professionals with deep, hands-on experience in patient care and healthcare delivery systems.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 
 </body>
 </html>
